minor change in netcdf section

--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -340,7 +340,7 @@ dummy arguments with their description
 real(kind=DP), intent(in) :: x(:)
 real(kind=DP), intent(in) :: t(:)
 \end{verbatim}
-\item When in data mode, add the following meta data using \texttt{NF90\_GLOBAL} for \texttt{varid} argument:
+\item When in define mode, add the following meta data using \texttt{NF90\_GLOBAL} for \texttt{varid} argument:
   \begin{enumerate}
   \item\texttt{"purpose" = "Fortran workshop"}
   \item\texttt{"name" = "Your name"}
