change orientated of softeng pie chart and added emails

--- a/fortran_usage/fortran_usage.tex
+++ b/fortran_usage/fortran_usage.tex
@@ -8,7 +8,7 @@
 
 \title{\bf Fortran Modernisation Workshop - \\ 
        Current Usage of Software Engineering}
-\author{Wadud Miah, Filippo Spiga, Fatima Chami, Kyle Fernandes}
+\author{Wadud Miah\footnote{wadud.miah@nag.co.uk}, Filippo Spiga\footnote{fs395@cam.ac.uk}, Fatima Chami\footnote{fatima.chami@durham.ac.uk}, Kyle Fernandes\footnote{kj333@cam.ac.uk}}
 \date{\today}
 
 \begin{document}
