fixed version control summary

--- a/fortran_usage/fortran_usage.tex
+++ b/fortran_usage/fortran_usage.tex
@@ -122,8 +122,8 @@ Figure~\ref{verscon:png}.
 \caption{Usage of version control systems}\label{verscon:png}
 \end{center}
 \end{figure}
-Figure~\ref{verscon:png} shows 39.78\% of the community do use version control systems
-whilst 60.22\% of the community do not. Version control systems are an important
+Figure~\ref{verscon:png} shows 39.78\% of the community do not use version control systems
+whilst 60.22\% of the community do. Version control systems are an important
 tool for reproducible research as well as a tool for increased productivity, so
 this needs to be addressed within the academic community. 
 %
