changed bibtex entry

--- a/fortran_usage/fortran_usage.bib
+++ b/fortran_usage/fortran_usage.bib
@@ -1,5 +1,6 @@
 @misc{fmw:nag,
-  author = {{Numerical Algorithms Group}},
+  author = {{Wadud Miah, Numerical Algorithms Group}},
   title = {{Fortran Modernisation Workshop}},
-  howpublished = "\url{http://www.nag.co.uk/content/fortran-modernization-workshop}"
+  howpublished = "\url{http://www.nag.co.uk/content/fortran-modernization-workshop}",
+  year = {2016}
 }
