changed the eps format to png

--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -234,7 +234,7 @@ git commit -m "modularised RHS, CFL, IO and Solver"
   code using the dependency graph in Figure~\ref{make_depend:eps}
 
 \begin{figure}[H]
-\includegraphics[width=\linewidth]{make_depend.eps}
+\includegraphics[width=\linewidth]{make_depend.png}
 \caption{Dependency graph for Makefile}
 \label{make_depend:eps}
 \end{figure}
