next revision of ccp5 document

--- a/fortran_usage/ccp5_application.bib
+++ b/fortran_usage/ccp5_application.bib
@@ -1,6 +1,34 @@
+@misc{cam:naps,
+  author = {{Digital Technology Group, University of Cambridge}},
+  title = {{New Approaches to Programming in Science}},
+  howpublished = "\url{http://www.cl.cam.ac.uk/research/dtg/naps/}",
+  year = {2016}
+}
+
 @misc{fmw:nag,
   author = {{Wadud Miah, Numerical Algorithms Group}},
   title = {{Fortran Modernisation Workshop}},
   howpublished = "\url{http://www.nag.co.uk/content/fortran-modernization-workshop}",
   year = {2016}
+}
+
+@misc{allinea,
+  author = {{Allinea}},
+  title = {{Allinea Parallel Debugging and Profiling}},
+  howpublished = "\url{www.allinea.com}",
+  year = {2016}
+}
+
+@misc{fmw:exp,
+  author = {{Wadud Miah}},
+  title = {{Experiences from the Fortran Modernisation Workshop}},
+  howpublished = "\url{http://www.fortran.bcs.org/2016/bcs_fmw_miahw.pdf}",
+  year = {2016}
+}
+
+@misc{archer:usage,
+  author = {{Archer}},
+  title = {{Archer programming language usage}},
+  howpublished = "\url{http://www.archer.ac.uk/status/codes/}",
+  year = {Nov. 2016}
 }
