--- a/fortran_usage/ccp5_application.tex
+++ b/fortran_usage/ccp5_application.tex
@@ -18,18 +18,20 @@
 
 %
 \section{Introduction}
-The Fortran Modernisation Workshop\footnote{\url{http://www.nag.co.uk/content/fortran-modernization-workshop}} is a two day event
+The Fortran Modernisation Workshop~\cite{fmw:nag} is a two day event
 that was designed to
 address the software engineering needs specifically for the computational science community using the Fortran programming language.
 It covers the more modern features of Fortran, namely 90, 95, 2003 and 2008, to encourage attendees to modernise their legacy
 Fortran 77 and 66 codes. It also aims to teach attendees how to write portable, efficient, extensible and modular code in Fortran for
 multi-scale and multi-physics computational science. The workshop is run by a number of organisers which are listed in the author's
 list who are computational scientists with extensive coding experience, making them qualified to run this workshop. In addition, the
-Digital Technology Group~\footnote{\url{http://www.cl.cam.ac.uk/research/dtg/naps/}} from Cambridge University also attend to
-present their CamFort Fortran verfication tool and Allinea~\footnote{\url{www.allinea.com}} also present their debugging and
-profiling tools for Fortran. Although there are a number of Fortran and software engineering workshops run by the Archer HPC
+Digital Technology Group from Cambridge University also attend to
+present their CamFort Fortran~\cite{cam:naps} verification tool and Allinea~\cite{allinea} also present their debugging and
+profiling tools for Fortran. \\
+
+Although there are a number of Fortran and software engineering workshops run by the Archer HPC
 service and the Software Sustainability Institute, such workshops tend to be very generic and do not address any particular
-academic community which makes Fortran Modernisation Workshop workshop very unique. \\
+academic community which makes the Fortran Modernisation Workshop workshop very unique. \\
 
 The topics that are covered in this workshop are listed below:
 \begin{itemize}
@@ -41,17 +43,15 @@ The topics that are covered in this workshop are listed below:
 \item Fortran verification using CamFort;
 \item Doxygen for Fortran code documentation;
 \item Git version control for collaborative code development;
-\item In-memory visualisation using PLplot in Fortran;
-\item IEEE Floating Point Exception Handling
+\item In-situ visualisation using PLplot in Fortran;
+\item IEEE floating point exception handling;
 \item Fortran interoperability with C, Python and R;
 \item Introduction to parallelism for Fortran;
 \item Debugging and profiling Fortran using Allinea DDT and MAP.
 \end{itemize}
-The technologies listed above cover the code development lifecycle as well as the computational science workflow,
-again making this workshop very unique and specific to computational science. Further info can be found at:
-\url{http://www.fortran.bcs.org/2016/bcs_fmw_miahw.pdf}
-During the workshop registration, the attendees
-were asked which versions of the Fortran standard they were using, and this is shown in Figure~\ref{fortran_usage:png}. 
+The technologies listed above cover the code development life-cycle as well as the computational science workflow,
+again making this workshop very unique and specific to computational science. Further information on the
+workflows can be found at~\cite{fmw:exp}. The Fortran standards used by the attendees is shown in Figure~\ref{fortran_usage:png}. 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=13cm,height=9cm]{fortran_usage.png}
@@ -63,19 +63,19 @@ Fortran 77 users. In addition, adoption of the newer standards such as 2003 and 
 adoption that aids better software engineering. Thus, ones of the aims of the workshop is to address this shortfall. \\
 
 The workshop feedback form listed the technologies that attendees intend to use which is shown in Figure~\ref{future:png}
-which shows that attendees intend to use the modern features of Fortran.
+which shows that most attendees intend to use the modern features of Fortran.
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=13cm,height=9cm]{future.png}
 \caption{Future technology usage by attendees}\label{future:png}
 \end{center}
 \end{figure}
-What Figure~\ref{future:png} also shows that there is a lack of interest in Fortran verfication techniques such as
+What Figure~\ref{future:png} also shows that there is a lack of interest in Fortran verification techniques such as
 pFUnit and CamFort. This is a trend the workshop organisers have noticed and intend to emphasise the importance
-of code verfication which is generally not very well covered for the Fortran programming language. 
+of code verification which is generally not very well covered for the Fortran programming language. 
 \section{History of the Workshop}
-The Fortran Modernisation Workshop has been hosted at a number of sites which is listed in Table~\ref{fmw:sites} which shows
-an average of 33.5 attendees. 
+The Fortran Modernisation Workshop has been hosted at six sites which are listed in Table~\ref{fmw:sites} with an
+average of 33.5 attendees per session. The workshop was rated by the attendees who gave it a value out of five. 
 \begin{table}[H]
 \centering 
 \begin{tabular}{|c|c|c|c|}
@@ -98,8 +98,8 @@ discussion with other sites regarding hosting the workshop.
 \begin{tabular}{|c|c|c|}
 \hline
 {\bf Site} & {\bf Date} & {\bf Number of registrations} \\ \hline
-Manchester University & February 2017 & 20 \\ \hline
-University of Reading & February 2017 & 25 \\ \hline 
+Manchester University & February 2017 & 22 \\ \hline
+University of Reading & February 2017 & 27 \\ \hline 
 \end{tabular}
 \caption{Future Fortran Modernisation Workshop sessions}
 \label{fmw:future}
@@ -110,9 +110,15 @@ As can be seen from Table~\ref{fmw:sites} the workshop has been hosted at six si
 Future sessions are listed in Table~\ref{fmw:future} and the workshop is continuously being improved from the feedback received.
 The workshop was attended mainly by academics as well as attendees from industry, particularly at the STFC Daresbury session. \\
 
-
-%\bibliographystyle{abbrv}
-%\bibliography{fortran_usage}
-
+Computational chemistry codes are predominantly written in Fortran as well many other computational science codes in
+engineering and earth sciences. Fortran codes account for approximately 73\% of CPU time on the Archer
+supercomputer~\cite{archer:usage}, making Fortran the main programming language for computational science. For the compelling
+reasons outlined herein, we are requesting funding from CCP5 for the Fortran Modernisation Workshop. For further questions,
+please feel free to contact me at \texttt{fatima.chami@stfc.ac.uk} or my colleague \texttt{wadud.miah@nag.co.uk} who
+will be happy to discuss this further. 
+%
+\bibliographystyle{abbrv}
+\bibliography{ccp5_application}
+%
 \end{document}
 
